--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,16 +9,15 @@
     %html{:class => "no-js", :lang => "en"}
     
 %head
+    %title CollegEbook
+    
     %meta{:charset => "utf-8"}
     %meta{"http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
-
-    %title CollegEbook
     %meta{:name => "description", :content => ""}
     %meta{:name => "author", :content => ""}
-
     %meta{:name => "viewport", :content => "width=device-width"}
 
-    %link{:rel => "stylesheet", :href => "css/styles.css", :type => "text/css"}
+    %link{:rel => "stylesheet", :href => "stylesheets/styles.css", :type => "text/css"}
 
     %script{:src => "js/libs/modernizr-2.5.3-respond-1.1.0.min.js"}
     %script{:src => "js/libs/prefixfree.min.js"}
