--- a/views/layout.haml
+++ b/views/layout.haml
@@ -30,4 +30,8 @@
             or
             %a{:href => "http://www.google.com/chromeframe/?redirect=true"} install Google Chrome Frame
             to experience this site.
+
     = yield
+
+%script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
+%script{:src => "js/scripts.js"}
