--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -17,15 +17,16 @@ $top-space: 70px;
 body{background-color:$dk-blu;}
 #header-container{height:$top-space;position:fixed;border-bottom:1px dotted black;background-color:$ot-blu;}
 #main-container{position:relative;top:$top-space+30px;}
-#footer-container{height:30px;position:fixed;bottom:0;background-color:$ot-blu;}
+#footer-container{position:fixed;bottom:0;background-color:$ot-blu;}
+footer{width:100%;}
 #tag_wrapper{float:right;margin-right:12%;background-color:#004466;padding:10px;border:1px solid #224455;}
 #splash{position:relative;width:60%;margin-left:auto;margin-right:auto;border:1px dotted black;background-color:$bl-red;padding:8px;text-align:center;}
 .b{display:block;width:100%;}
 .r4{border-radius:4px;}
 .r8{border-radius:8px;}
-.btn{background-color:#888;padding:4px;}
+.btn{background-color:#888;padding:3px;}
 .btn:hover{background-color:#eee;}
-.menu{background-color:#556688;padding:3px;}
+.menu{background-color:#556688;padding:3px;display:inline-block;}
 .tag{background-color:#445588;padding:4px;}
 .post{background-color:#aaaaee;border:1px solid #22a;padding:5px;}
 .college_logo{position:absolute;top:0.8em;right:1.8em;
