--- a/views/e404.haml
+++ b/views/e404.haml
@@ -1,11 +1,10 @@
 !!!
 %html{:lang => "en"}
 %head
-    %meta{charset="utf-8"}
+    %meta{:charset => "utf-8"}
     %title Page Not Found :(
-    <style>
-        ::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
-        ::selection { background: #fe57a1; color: #fff; text-shadow: none; }
+    %style
+        selection { background: #fe57a1; color: #fff; text-shadow: none; }
         html { padding: 30px 10px; font-size: 20px; line-height: 1.4; color: #737373; background: #f0f0f0; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
         html, input { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
         body { max-width: 500px; _width: 500px; padding: 30px 20px 50px; border: 1px solid #b3b3b3; border-radius: 4px; margin: 0 auto; box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff; background: #fcfcfc; }
@@ -24,7 +23,7 @@
         #goog-wm-sb:hover, #goog-wm-sb:focus { border-color: #aaa; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1); background-color: #f8f8f8; }
         #goog-wm-qt:focus, #goog-wm-sb:focus { border-color: #105cb6; outline: 0; color: #222; }
         input::-moz-focus-inner { padding: 0; border: 0; }
-    </style>
+
 %body
     .container
     %h1 
