--- a/views/layout.haml
+++ b/views/layout.haml
@@ -34,4 +34,5 @@
     = yield
 
 %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
+%script{:src => "http://pjax.heroku.com/jquery.pjax.js"}
 %script{:src => "js/scripts.js"}
