--- a/views/main.haml
+++ b/views/main.haml
@@ -5,9 +5,9 @@
 #main-container.wrapper.clearfix.b{:role => "main"}
     
     -# main
-    #splash.r8
-        %h2 Log In or Sign Up
-        %input{:type => "text", :value => "anything"}
-        %a.btn.r4{:href => "main"} Go!
+    #main.r8
+        #left.ib LEFT_one
+        #middle.ib MIDDLE_one
+        #right.ib RIGHT_one
 
 = haml(:'partials/_footer', :layout => false)
