--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -20,11 +20,13 @@ body{background-color:$dk-blu;}
     ul{display:inline-block;position:relative;top:$top-space;}
     li{display:inline-block;list-style:none;}}
 #main-container{position:relative;top:$top-space+30px;}
+#main{width:90%;background-color:$bl-red;border:1px solid orange;}
 #footer-container{position:fixed;bottom:0;background-color:$ot-blu;}
 footer{width:100%;}
 #tag_wrapper{float:right;margin-right:12%;background-color:#004466;padding:10px;border:1px solid #224455;}
 #splash{position:relative;width:60%;margin-left:auto;margin-right:auto;border:1px dotted black;background-color:$bl-red;padding:8px;text-align:center;}
 .b{display:block;width:100%;}
+.ib{display:inline-block;}
 .r4{border-radius:4px;}
 .r8{border-radius:8px;}
 .btn{background-color:#888;padding:3px;}
@@ -35,7 +37,7 @@ footer{width:100%;}
 .college_logo{position:absolute;top:0.8em;right:1.8em;
     img{border:0;width:81px;height:46px;}}
 .login{float:right;border:1px dotted black;padding:4px;position:relative;top:1px;right:80px;color:black;background-color:#006699;width:80px;text-align:center;}
-h1#title{font-family:'Annie Use Your Telescope',cursive;font-size:30pt;margin-left:0.6em;margin-top:0.5em;
+h1#title{font-family:'Annie Use Your Telescope',cursive;font-size:30pt;margin-left:0.6em;margin-top:0.3em;
     a{color:#aaaaaa;}}
 h2{font-size:18pt;color:#aaa;margin-left:1px;margin-bottom:5px;}
 
