--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -18,9 +18,15 @@ body{background-color:$dk-blu;}
 #header-container{height:$top-space;position:fixed;border-bottom:1px dotted black;background-color:$ot-blu;}
 #nav-container{position:absolute;
     ul{display:inline-block;position:relative;top:$top-space;}
-    li{display:inline-block;list-style:none;}}
-#main-container{position:relative;top:$top-space+30px;}
-#main{width:90%;background-color:$bl-red;border:1px solid orange;}
+    li{display:inline-block;list-style:none;}
+}
+#main-container{position:relative;top:$top-space+30px;
+    #main{width:98%;margin-left:auto;margin-right:auto;background-color:$bl-red;border:1px dotted $dk-blu;}
+    #left{float:left;}
+    #right{float:right;}
+    .third{width:30%;border:1px dotted black;}
+    ul{list-style:none;}
+}
 #footer-container{position:fixed;bottom:0;background-color:$ot-blu;}
 footer{width:100%;}
 #tag_wrapper{float:right;margin-right:12%;background-color:#004466;padding:10px;border:1px solid #224455;}
@@ -41,7 +47,8 @@ h1#title{font-family:'Annie Use Your Telescope',cursive;font-size:30pt;margin-le
     a{color:#aaaaaa;}}
 h2{font-size:18pt;color:#aaa;margin-left:1px;margin-bottom:5px;}
 
-a{color:#00f;}
+a, a:visited{color:#0ff;}
+a:hover{color:#fee;}
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen
