--- a/views/main.haml
+++ b/views/main.haml
@@ -5,9 +5,46 @@
 #main-container.wrapper.clearfix.b{:role => "main"}
     
     -# main
-    #main.r8
-        #left.ib LEFT_one
-        #middle.ib MIDDLE_one
-        #right.ib RIGHT_one
+    %center
+        #main.r8
+            #left.third.ib
+                %h1 My Self
+                %img{:src => "img/blank-user.gif"}
+                %pre 
+                    06/04/1992
+                    Philadelphia, PA
+                    Course 2A
+                    Class 2014
+                    
+                %b Interests:
+                soccer, dancing, travel
+                
+                %b My net
+                Parties
+                Spain@MIT
+                Course 2
+                Varsity
+                Culture
+
+                %b My posts
+                Total:          24
+                New replies:    8
+                %b Preferences
+                Email forwarding
+
+            #middle.third.ib
+                %h1 Interests Map
+            
+            #right.third.ib
+                %h1 My Tags
+                %ul
+                    %li 
+                        %a.pjax{:href => "Food"} Food
+                    %li 
+                        %a.pjax{:href => "Spain@MIT"} Spain@MIT
+                    %li
+                        %a.pjax{:href => "Parties"} Parties
+                    %li
+                        %a.pjax{:href => "Class of 9999"} Class of 9999
 
 = haml(:'partials/_footer', :layout => false)
