--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -30,7 +30,7 @@ body{background-color:$dk-blu;}
 #footer-container{position:fixed;bottom:0;background-color:$ot-blu;}
 footer{width:100%;}
 #tag_wrapper{float:right;margin-right:12%;background-color:#004466;padding:10px;border:1px solid #224455;}
-#splash{position:relative;width:60%;margin-left:auto;margin-right:auto;border:1px dotted black;background-color:$bl-red;padding:8px;text-align:center;}
+#splash{position:relative;width:60%;min-height:80px;max-height:50%;margin-left:auto;margin-right:auto;border:1px dotted black;background-color:$bl-red;padding:8px;text-align:center;}
 .b{display:block;width:100%;}
 .ib{display:inline-block;}
 .r4{border-radius:4px;}
