--- a/views/index.haml
+++ b/views/index.haml
@@ -6,7 +6,7 @@
     
     -# main
     #splash.r8
-        %h2 Log In or Sign Up
+        %h2{:style => "margin-bottom:10px;"} Log In or Sign Up
         %input{:type => "text", :value => "anything"}
         %a.btn.r4{:href => "main"} Go!
 
