--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -9,19 +9,22 @@
  * Author: Dan Haber
  */
 
-$dk-blu: #069;
+$lt-blu: #069;
 $ot-blu: #036;
 $bl-red: #379;
 $top-space: 70px;
 
-body{background-color:$dk-blu;}
-#header-container{height:$top-space;position:fixed;border-bottom:1px dotted black;background-color:$ot-blu;}
-#nav-container{position:absolute;
-    ul{display:inline-block;position:relative;top:$top-space;}
-    li{display:inline-block;list-style:none;}
+body{background-color:$lt-blu;}
+#header-container{height:$top-space;position:fixed;border-bottom:1px solid darken($ot-blu, 10%);background-color:$ot-blu;z-index:99;}
+#nav-container{position:fixed;z-index:98;top:$top-space;background-color:$bl-red;border-bottom:1px solid darken($bl-red, 10%);
+    ul{display:block;position:relative;}
+    li{display:inline-block;list-style:none;border:1px solid darken($bl-red, 20%);margin: 0 0.4em 0 0.4em;
+        a{background-color:darken($bl-red, 10%);display:inline-block;height:100%;width:100%;font-size:11pt;padding:0.2em;}
+        &.login{float:right;margin-right:3em;}
+    }
 }
-#main-container{position:relative;top:$top-space+30px;
-    #main{width:98%;margin-left:auto;margin-right:auto;background-color:$bl-red;border:1px dotted $dk-blu;}
+#main-container{position:relative;top:$top-space+50px;
+    #main{width:98%;margin-left:auto;margin-right:auto;}
     #left{float:left;}
     #right{float:right;}
     .third{width:30%;border:1px dotted black;}
@@ -42,12 +45,12 @@ footer{width:100%;}
 .post{background-color:#aaaaee;border:1px solid #22a;padding:5px;}
 .college_logo{position:absolute;top:0.8em;right:1.8em;
     img{border:0;width:81px;height:46px;}}
-.login{float:right;border:1px dotted black;padding:4px;position:relative;top:1px;right:80px;color:black;background-color:#006699;width:80px;text-align:center;}
+
 h1#title{font-family:'Annie Use Your Telescope',cursive;font-size:30pt;margin-left:0.6em;margin-top:0.3em;
-    a{color:#aaaaaa;}}
+    a{color:#ddd;}}
 h2{font-size:18pt;color:#aaa;margin-left:1px;margin-bottom:5px;}
 
-a, a:visited{color:#0ff;}
+a, a:visited{color:#aef;}
 a:hover{color:#fee;}
 
 /* Smartphones (portrait and landscape) ----------- */
