--- a/views/partials/_header.haml
+++ b/views/partials/_header.haml
@@ -3,6 +3,6 @@
         %h1#title
             %a{:href => "/"} CollegEbook
         %nav
-            %a.college_logo{:href => "http://web.mit.edu/"}
+            %a.college_logo{:href => "img/cached_logo-mit.gif"}
                 %img{:src => "http://web.mit.edu/graphicidentity/interface/mit-greywhite-header3.gif", :alt => "MIT"}/
             %p{:style => "position:relative; top:-5px; left:10em;"}= Time.now.strftime("Debug: load@ %Y/%m/%d %H:%M:%S")
