duct-tape user martha pass-43857234h875fh348rtf

--- a/views/index.haml
+++ b/views/index.haml
@@ -12,12 +12,12 @@
             %fieldset
                 %legend Log In:
                 Username: 
-                %input{:type => "text", :name => "user", :size => "10"}/
+                %input{:type => "text", :name => "user", :size => "10", value:"Martha", style:"margin:5px;"}/
                 %br/
                 Password:
-                %input{:type => "password", :name => "pass", :size => "10"}/
+                %input{:type => "password", :name => "pass", :size => "10", value:"pass", style:"margin:5px;"}/
                 %br/
-                %input.btn.r4{:type => "submit", :value => "Submit"}/
+                %input.btn.r4{:type => "submit", :value => "Submit", style:"margin:5px;"}/
 
         -#%a.btn.r4{:href => "main"} Go!
 
