--- a/views/main.haml
+++ b/views/main.haml
@@ -6,7 +6,8 @@
     -# main
     %center
         #main.r8
-            #left.third.ib
+            #left.ib
+                .b
                 %h1 My Self
                 %img{:src => "img/blank-user.gif"}
                 %pre 
@@ -31,10 +32,12 @@
                 %b Preferences
                 Email forwarding
 
-            #middle.third.ib
+            #middle.ib
+                .b
                 %h1 Interests Map
             
-            #right.third.ib
+            #right.ib
+                .b
                 %h1 My Tags
                 %ul
                     %li 
