--- a/views/partials/_footer.haml
+++ b/views/partials/_footer.haml
@@ -1,9 +1,9 @@
 #footer-container.wrapper.b
     %footer
         %center
-            .menu Home
-            .menu About
-            .menu Advertise
-            .menu Terms
-            .menu Help
-            .menu Contact
+            .menu.r4 Home
+            .menu.r4 About
+            .menu.r4 Advertise
+            .menu.r4 Terms
+            .menu.r4 Help
+            .menu.r4 Contact
