--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -12,6 +12,7 @@
 $lt-blu: #069;
 $dk-blu: #037;
 $tr-blu: transparentize($dk-blu, 0.8);
+$tr-br-blu: transparentize($dk-blu, 0.5);
 $bl-red: #379;
 $top-space: 70px;
 
@@ -34,7 +35,7 @@ body{background-color:$lt-blu;}
 #footer-container{position:fixed;bottom:0;background-color:$dk-blu;}
 footer{width:100%;}
 #tag_wrapper{float:right;margin-right:12%;background-color:#004466;padding:10px;border:1px solid #224455;}
-#splash{position:relative;width:60%;min-height:80px;max-height:50%;margin-left:auto;margin-right:auto;border:1px dotted black;background-color:$bl-red;padding:8px;text-align:center;}
+#splash{position:relative;width:60%;min-height:80px;max-height:50%;margin-left:auto;margin-right:auto;border:1px solid $tr-br-blu;background-color:$tr-blu;padding:8px;text-align:center;}
 .b{display:block;width:100%;}
 .ib{display:inline-block;}
 .r4{border-radius:4px;}
