--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -322,8 +322,8 @@ footer {
   max-height: 50%;
   margin-left: auto;
   margin-right: auto;
-  border: 1px dotted black;
-  background-color: #337799;
+  border: 1px solid rgba(0, 51, 119, 0.5);
+  background-color: rgba(0, 51, 119, 0.2);
   padding: 8px;
   text-align: center; }
 
