--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -35,7 +35,11 @@ body{background-color:$lt-blu;}
 #footer-container{position:fixed;bottom:0;background-color:$dk-blu;}
 footer{width:100%;}
 #tag_wrapper{float:right;margin-right:12%;background-color:#004466;padding:10px;border:1px solid #224455;}
-#splash{position:relative;width:60%;min-height:80px;max-height:50%;margin-left:auto;margin-right:auto;border:1px solid $tr-br-blu;background-color:$tr-blu;padding:8px;text-align:center;}
+#splash{position:relative;width:60%;min-height:80px;max-height:50%;margin-left:auto;margin-right:auto;border:1px solid $tr-br-blu;background-color:$tr-blu;padding:8px;text-align:center;
+    form{margin:5px 10px;vertical-align:top;}
+    fieldset{border:1px solid $tr-br-blu;padding:5px;background-color:$tr-blu;}
+    legend{padding:5px;font-size:12pt;}
+}
 .b{display:block;width:100%;}
 .ib{display:inline-block;}
 .r4{border-radius:4px;}
