progress on mongodb

--- a/views/index.haml
+++ b/views/index.haml
@@ -12,7 +12,7 @@
             %fieldset
                 %legend Log In:
                 Username: 
-                %input{:type => "text", :name => "user", :size => "10", value:"Martha", style:"margin:5px;"}/
+                %input{:type => "text", :name => "name", :size => "10", value:"Martha", style:"margin:5px;"}/
                 %br/
                 Password:
                 %input{:type => "password", :name => "pass", :size => "10", value:"pass", style:"margin:5px;"}/
@@ -23,7 +23,7 @@
             %fieldset
                 %legend Sign Up:
                 Username: 
-                %input{:type => "text", :name => "user", :size => "10", value:"username", style:"margin:5px;"}/
+                %input{:type => "text", :name => "name", :size => "10", value:"username", style:"margin:5px;"}/
                 %br/
                 E-mail:
                 %input{:type => "text", :name => "email", :size => "10", value:"email", style:"margin:5px;"}/
