amend-456tiugtehrq98fgq34hhaeaaghf67

--- a/views/index.haml
+++ b/views/index.haml
@@ -12,10 +12,10 @@
             %fieldset
                 %legend Log In:
                 Username: 
-                %input{:type => "text", :name => "name", :size => "10", value:"Martha", style:"margin:5px;"}/
+                %input{:type => "text", :name => "name", :size => "10", style:"margin:5px;"}/
                 %br/
                 Password:
-                %input{:type => "password", :name => "pass", :size => "10", value:"pass", style:"margin:5px;"}/
+                %input{:type => "password", :name => "pass", :size => "10", style:"margin:5px;"}/
                 %br/
                 %input.btn.r4{:type => "submit", :value => "Submit", style:"margin:5px;"}/
                 
@@ -23,10 +23,10 @@
             %fieldset
                 %legend Sign Up:
                 Username: 
-                %input{:type => "text", :name => "name", :size => "10", value:"username", style:"margin:5px;"}/
+                %input{:type => "text", :name => "name", :size => "10", style:"margin:5px;"}/
                 %br/
                 E-mail:
-                %input{:type => "text", :name => "email", :size => "10", value:"email", style:"margin:5px;"}/
+                %input{:type => "text", :name => "email", :size => "10", style:"margin:5px;"}/
                 %br/
                 Password:
                 %input{:type => "password", :name => "pass", :size => "10", style:"margin:5px;"}/
