github commit - 8834h8fgdfg5468

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,4 +1,5 @@
 !!! 5
+/ All this crap brought to you by: Microsoft.
 /[if lt IE 7]
     %html{:class => "no-js lt-ie9 lt-ie8 lt-ie7", :lang => "en"}
 /[if IE 7]
