--- a/views/main.haml
+++ b/views/main.haml
@@ -8,37 +8,65 @@
         #main.r8
             #left.ib
                 .b
-                %h1 My Self
+                %h3 My Self
+                %br/
                 %img{:src => "img/blank-user.gif"}
-                %pre 
+                %br/
+                %code
                     06/04/1992
                     Philadelphia, PA
-                    Course 2A
-                    Class 2014
+                    Course: 2A
+                    Class:  2014
                     
-                %b Interests:
-                soccer, dancing, travel
+                %h4 Interests:
                 
-                %b My net
-                Parties
-                Spain@MIT
-                Course 2
-                Varsity
-                Culture
+                soccer,
+                %br/
+                dancing,
+                %br/
+                travel
+                %br/
+                
+                %h4 My net
 
-                %b My posts
-                Total:          24
-                New replies:    8
-                %b Preferences
+                Parties
+                %br/
+                Spain@MIT
+                %br/
+                Course 2
+                %br/
+                Varsity
+                %br/
+                Culture
+                %br/
+
+                %h4 My posts
+
+                %code
+                    Total:       24
+                %br/
+                %code
+                    New replies: 8
+                %br/
+                
+                %h4 Preferences
+
                 Email forwarding
 
             #middle.ib
                 .b
-                %h1 Interests Map
+                %h3 My Feed
+                %br/
+                %p
+                    %hr{width:"80%"}/
+                - 7.times do |i|
+                    .feed_item= "asdf#{sprintf("%.2f", 1.62*i/2)}hgkj"
+                    %hr{width:"50%"}/
             
             #right.ib
                 .b
-                %h1 My Tags
+                %h3 My Tags
+                %br/
                 %ul
                     %li 
                         %a.pjax{:href => "Food"} Food
