--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -283,24 +283,18 @@ body {
 #main-container {
   position: relative;
   top: 120px; }
-  #main-container #main {
-    width: 98%;
-    margin-left: auto;
-    margin-right: auto; }
+  #main-container .column {
+    vertical-align: top;
+    margin-bottom: 8px;
+    height: 100%;
+    background-color: rgba(0, 51, 119, 0.2);
+    padding: 1em; }
   #main-container #left {
-    float: left;
-    width: 25%;
-    background-color: rgba(0, 51, 119, 0.2);
-    padding: 1em; }
-  #main-container #middle {
-    width: 40%;
-    background-color: rgba(0, 51, 119, 0.2);
-    padding: 1em; }
+    float: left; }
+  #main-container #middle .feed_item {
+    width: 28em; }
   #main-container #right {
-    float: right;
-    width: 25%;
-    background-color: rgba(0, 51, 119, 0.2);
-    padding: 1em; }
+    float: right; }
   #main-container ul {
     list-style: none; }
 
@@ -340,6 +334,9 @@ footer {
   #splash legend {
     padding: 5px;
     font-size: 12pt; }
+
+.h {
+  height: 100%; }
 
 .b {
   display: block;
