--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -26,22 +26,22 @@ body{background-color:$lt-blu;}
     }
 }
 #main-container{position:relative;top:$top-space+50px;
-	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;}
+	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;
 //		.b{min-width:300px;max-width:100%;}
 	}
     #main{}
     #left{float:left;width:25%;
 //	width:25%;background-color:$tr-blu;padding:1em;float:left;
 	}
-    #middle{width:42%;
+    #middle{width:40%;margin-left:auto;margin-right:auto;
 //	width:40%;background-color:$tr-blu;padding:1em;
-		.feed_item{width:28em;}
+//		.feed_item{width:28em;}
 	}
     #right{float:right;width:25%;
 //	width:25%;background-color:$tr-blu;padding:1em;float:right;
 	}
     ul{list-style:none;}
-//}
+}
 #footer-container{position:fixed;bottom:0;background-color:$dk-blu;}
 footer{width:100%;}
 #tag_wrapper{float:right;margin-right:12%;background-color:#004466;padding:10px;border:1px solid #224455;}
