amendment - 39urh89w374ry

--- a/views/partials/_header.haml
+++ b/views/partials/_header.haml
@@ -1,8 +1,8 @@
 #header-container.wrapper.clearfix.b
     %header
         %h1#title
-            / %a{:href => "/"} CollegEbook
-            %a{:href => "/"} -
+            %a{:href => "/"} CollegEbook
+            / %a{:href => "/"} -
         %nav
             %a.college_logo{:href => "http://web.mit.edu/"}
                 %img{:src => "img/cached_logo-mit.gif", :alt => "MIT"}/
