amend - 9438yt9hgerar

--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -23,6 +23,9 @@ body{background-color:$lt-blu;}
     li{display:inline-block;list-style:none;margin: 0 0.5em 0 0.5em;
         a{background-color:darken($bl-red, 10%);border:1px solid darken($bl-red, 20%);display:inline-block;height:100%;width:100%;font-size:11pt;padding:0.3em;}
         &.login{float:right;margin-right:3em;}
+        @media only screen and (max-width : 320px) {
+            a{display:inline;}
+        }
     }
 }
 #main-container{position:relative;top:$top-space+50px;
@@ -30,14 +33,14 @@ body{background-color:$lt-blu;}
 //		.b{min-width:300px;max-width:100%;}
 	}
     #main{}
-    #left{float:left;width:25%;
+    #left{float:left;width:20%;
 //	width:25%;background-color:$tr-blu;padding:1em;float:left;
 	}
-    #middle{width:40%;margin-left:auto;margin-right:auto;
+    #middle{width:50%;margin-left:auto;margin-right:auto;
 //	width:40%;background-color:$tr-blu;padding:1em;
 //		.feed_item{width:28em;}
 	}
-    #right{float:right;width:25%;
+    #right{float:right;width:20%;
 //	width:25%;background-color:$tr-blu;padding:1em;float:right;
 	}
     ul{list-style:none;}
