--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -24,7 +24,8 @@ body{background-color:$lt-blu;}
         a{background-color:darken($bl-red, 10%);border:1px solid darken($bl-red, 20%);display:inline-block;height:100%;width:100%;font-size:11pt;padding:0.3em;}
         &.login{float:right;margin-right:3em;}
         @media only screen and (max-width : 320px) {
-            a{display:inline;}
+            li{display:inline;}
+            a{display:inline;border:none;}
         }
     }
 }
