--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -280,8 +280,11 @@ body {
       float: right;
       margin-right: 3em; }
     @media only screen and (max-width : 320px) {
+      #nav-container li li {
+        display: inline; }
       #nav-container li a {
-        display: inline; } }
+        display: inline;
+        border: none; } }
 
 #main-container {
   position: relative;
