--- a/views/layout.haml
+++ b/views/layout.haml
@@ -18,7 +18,8 @@
     %meta{:name => "author", :content => ""}
     %meta{:name => "viewport", :content => "width=device-width"}
 
-    %link{:rel => "stylesheet", :href => "stylesheets/styles.css", :type => "text/css"}
+    
+    %link{rel: "stylesheet", href: "stylesheets/styles.css", type: "text/css", media: "all"}
 
     %script{:src => "js/libs/modernizr-2.5.3-respond-1.1.0.min.js"}
     %script{:src => "js/libs/prefixfree.min.js"}
