--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -23,9 +23,9 @@ body{background-color:$lt-blu;}
     li{display:inline-block;list-style:none;margin: 0 0.5em 0 0.5em;
         a{background-color:darken($bl-red, 10%);border:1px solid darken($bl-red, 20%);display:inline-block;height:100%;width:100%;font-size:11pt;padding:0.3em;}
         &.login{float:right;margin-right:3em;}
-        @media only screen and (max-width : 320px) {
-            li{display:inline;}
-            a{display:inline;border:none;}
+        @media only screen and (max-width : 400px) {
+            li{margin:0;padding:0;}
+            a{border:none;background-color:$tr-blu;font-size:9pt;}
         }
     }
 }
