--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -279,12 +279,14 @@ body {
     #nav-container li.login {
       float: right;
       margin-right: 3em; }
-    @media only screen and (max-width : 320px) {
+    @media only screen and (max-width : 400px) {
       #nav-container li li {
-        display: inline; }
+        margin: 0;
+        padding: 0; }
       #nav-container li a {
-        display: inline;
-        border: none; } }
+        border: none;
+        background-color: rgba(0, 51, 119, 0.2);
+        font-size: 9pt; } }
 
 #main-container {
   position: relative;
